--- a/css/style2.css
+++ b/css/style2.css
@@ -374,7 +374,6 @@ b{
 	left: 0;
 	background: var(--bg-color);
 	width: 100%;
-	height: 500px;
 	display: flex;
 	align-items: center;
 	flex-direction: column;
@@ -1799,5 +1798,48 @@ input[type="submit"]:hover{
 		width: 420px;
 		height: fit-content;
 		padding: 15px 0;
+	}
+	.Presentacion .profile{
+		width: 250px;
+		height: 250px;
+	}
+	.b-home{
+		font-size: 1.2rem;
+	}
+	.profile-description-me{
+		font-size: 1rem;
+	}
+	.imgBx-about-me img{
+		width: 320px;
+		height: 250px;
+	}
+	.about-me-subtitle{
+		width: 90%;
+	}
+	.about-me-subtitle p{
+		font-size: 14px;
+	}
+	.About-me-description{
+		display: flex;
+		flex-direction: column;
+		text-align: center;
+		justify-content: center;
+		align-items: center;
+	}
+	.About-me-experience,	.about-me-subtitle{
+	 width: 80%;
+	}
+	.imgBx-img{
+		width: 270px;
+		height: 200px;
+	}
+	.data-web-site{
+		width: 270px;
+	}
+	.service-data h4{
+		font-size: 12px;
+	}
+	.swiper-proyecto-icon{
+		font-size: 2.5rem;
 	}
 }
