--- a/css/style2.css
+++ b/css/style2.css
@@ -148,7 +148,7 @@ header{
 .nav .Logo h1{
 	font-size: 1.5rem;
 	font-weight: 700; 
-	font-family: var(--font-second);
+	color: var(--color-white);
 	width: 100%;
 	text-align: center;
 
@@ -1775,6 +1775,30 @@ input[type="submit"]:hover{
 
 @media screen and (max-width: 600px){
 
+	.nav__data{
+		width: 100%;
+	}
+	ul li a{
+		font-size: 20px;
+	}
+	.nav__data.active ul{
+		position: relative;
+		/* top: 25px; */
+		width: 100%;
+		height: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		gap: 15px;
+		padding: 0;
+		margin: 0;
+	}
+
+	.link_nav_icon i{
+      font-size: 28px;
+	}
+	
 	.content-services{
 		flex-direction: column;
 		gap: 35px;
