--- a/css/style2.css
+++ b/css/style2.css
@@ -148,7 +148,7 @@ header{
 .nav .Logo h1{
 	font-size: 1.5rem;
 	font-weight: 700; 
-	font-family: var(--font-second);
+	color: var(--color-white);
 	width: 100%;
 	text-align: center;
 
@@ -172,21 +172,21 @@ ul li a{
    text-decoration: none;
    color: var(--color-parrafo);
    font-family: var(--font-second);
-   font-size: .9rem;
+   font-size: 1.1rem;
    font-weight: 900;
    padding-bottom: 5px;
 }
 ul li:nth-child(1) a:nth-child(1){
  color: var(--first-color);
 }
-ul li:nth-child(8) i{
-	display: none;
+.nav__data{
+	margin: 0 10px;
 }
 
 .ri-moon-fill{
 	color:var(--color-white);
 	cursor: pointer;
-	font-size: 18px;
+	font-size: 25px;
 	 display: flex;
  align-items: center;
  justify-content: flex-start;
@@ -198,7 +198,7 @@ ul li:nth-child(8) i{
 .ri-sun-fill{
 	color:var(--color-white);
 		cursor: pointer;
-	font-size: 18px;
+	font-size: 25px;
 	transition: .7s;
 }
 .ri-moon-fill:hover{
@@ -274,8 +274,8 @@ ul li:nth-child(8) i{
 .verMas{
     position: relative;
 	display: flex;
-	height: 50px;
-	width: 130px;
+	height: 60px;
+	width: 170px;
 	border-radius: 5px;
 	background: var(--first-color);
     align-items: center;
@@ -287,7 +287,7 @@ ul li:nth-child(8) i{
 
 
 .verMas a{
-	font-size: 15px;
+	font-size: 19px;
 	font-weight: bolder;
 	color: #fff;
 	text-decoration: none;
@@ -298,8 +298,8 @@ ul li:nth-child(8) i{
  .ri-arrow-right-line{
 
  	padding: 0px 5px;
- 	font-size: 18px;
- 	color: var(--first-color);
+ 	font-size: 25px;
+ 	color: #fff;
 
 }
 
@@ -374,7 +374,6 @@ b{
 	left: 0;
 	background: var(--bg-color);
 	width: 100%;
-	height: 500px;
 	display: flex;
 	align-items: center;
 	flex-direction: column;
@@ -443,7 +442,7 @@ b{
 
     font-weight: bolder;
     color: #999;
-    font-size: 16px;
+    font-size: 19px;
     font-family: var(--font-title);
 }
 
@@ -456,7 +455,7 @@ b{
 	text-align: center;
 }
 .first-caja- span{
-	font-size: 13px;
+	font-size: 15px;
 	font-weight: bolder;
 	color: #999;
 }
@@ -477,7 +476,8 @@ b{
 	  height: 40px;
       padding: 10px;
       display: flex;
-      justify-content: space-around;
+      justify-content: center;
+	  gap: 5px;
       align-items: center;
       cursor: pointer;
       transition:  0.7s;
@@ -500,7 +500,6 @@ b{
 	.container-Skill{
 	  background: var(--bg-color);
        width: 100%;
-       height: 600px;
        position: relative;
        top: 0;
        left: 0;
@@ -778,6 +777,10 @@ b{
 	   padding: 0;
 	}
 
+	.service-data{
+		width: fit-content;
+	}
+
    .Presentacion{
 	flex-direction: column;
    }
@@ -791,6 +794,10 @@ b{
    .profile-description, .profile-description-me,.about-me-subtitle p{
 	text-align: center;
 	align-items: center;
+	width: fit-content;
+   }
+   .profile-description .profile-titulo{
+	font-size: 25px;
    }
    .red-social{
 	 flex-direction: initial;
@@ -829,6 +836,7 @@ position: relative;
     z-index: 100;
 	}
 		.nav__data.active{
+			margin: 0;
 			color: var(--bg-color);
 		    display: flex;
     transform: translateX(0px);
@@ -1768,6 +1776,30 @@ input[type="submit"]:hover{
 
 @media screen and (max-width: 600px){
 
+	.nav__data{
+		width: 100%;
+	}
+	ul li a{
+		font-size: 20px;
+	}
+	.nav__data.active ul{
+		position: relative;
+		/* top: 25px; */
+		width: 100%;
+		height: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		gap: 15px;
+		padding: 0;
+		margin: 0;
+	}
+
+	.link_nav_icon i{
+      font-size: 28px;
+	}
+	
 	.content-services{
 		flex-direction: column;
 		gap: 35px;
@@ -1800,4 +1832,79 @@ input[type="submit"]:hover{
 		height: fit-content;
 		padding: 15px 0;
 	}
+	.Presentacion .profile{
+		width: 250px;
+		height: 250px;
+	}
+	.b-home{
+		font-size: 1.2rem;
+	}
+	.profile-description-me{
+		font-size: 1rem;
+	}
+	.imgBx-about-me img{
+		width: 320px;
+		height: 250px;
+	}
+	.about-me-subtitle{
+		width: 90%;
+	}
+	.about-me-subtitle p{
+		font-size: 14px;
+	}
+	.About-me-description{
+		display: flex;
+		flex-direction: column;
+		text-align: center;
+		justify-content: center;
+		align-items: center;
+	}
+	.About-me-experience,	.about-me-subtitle{
+	 width: 80%;
+	}
+	.imgBx-img{
+		width: 270px;
+		height: 200px;
+	}
+	.data-web-site{
+		width: 270px;
+	}
+	.service-data h4{
+		font-size: 12px;
+	}
+	.swiper-proyecto-icon{
+		font-size: 2.5rem;
+	}
+	.service-data{
+		width: fit-content;
+	}
+	.footer-data{
+		width: fit-content;
+	}
+	.About-me-description{
+		width: fit-content;
+	}
+}
+
+
+@media screen and (max-width:300px) {
+	 
+	.service-data h4{
+		margin: 0;
+	}
+	.imgBx-about-me img{
+		width: 80%;
+	}
+	.titulo-education{
+		margin: 0;
+	}
+}
+
+.descargar-cv a{
+	color: #fff;
+    text-decoration: none;
+}
+
+.descargar-cv i{
+	font-size: 20px;
 }
