--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@300&display=swap');
-
-  @import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@300&family=Koulen&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@300&family=Koulen&display=swap');
 *{
 
     margin: 0;
@@ -17,7 +17,7 @@ html{
 
 :root{
    
-   --hue-color:200;
+   --hue-color:210;
 
    --primer-color : hsl(var(--hue-color),100%,12%);
 
@@ -42,7 +42,7 @@ html{
 
    --bg-footer : hsl(var(--hue-color),40%,15%);
 
-   --body-font:'Koulen', sans-serif;
+   --body-font:Questrial,sans-serif;
 
    --h1-size : 1.8rem;
    --h2-size: 1.25rem;
@@ -59,6 +59,7 @@ html{
 }
 
 header{
+    padding: 8px 0;
     position: fixed;
     z-index: 1000;
     width: 100%;
@@ -78,6 +79,7 @@ body{
     font-size: var(--normal-font-size);
     font-family: var(--body-font);
     color: var(--text-color);
+    background-color: var(--body-color);
 }
 
 body.dark-theme{
@@ -175,7 +177,6 @@ header.active .ri-moon-line{
 }
 
 .contener_titulo_inicio{
-    margin: 80px 0 0 0;
 z-index: 1;
     padding: 10px 0 0 0;
     width: 100%;
@@ -211,36 +212,46 @@ body.dark-theme .contener_titulo_inicio::after{
 
 .contenedor_btn{
     text-align: center;
-    padding: 20px 20px 0 0;
 
 }
 .descubrir_platillos{
     cursor: pointer;
     padding: 1rem 2rem;
-    color: var(--color-white);
+    color: var(--color-a);
     text-decoration: none;
-    background-color: var(--primer-color);
+    background-color: var(--bg-nav);
     outline: none;
     border: none;
-    margin: 8px 0 0 0;
-    font-size: var(--h3-size);
+    margin: 25px 0 0 0;
+    font-size: 1.3rem;
     font-weight: var(--font-semi-bold);
     transition: .3s ease all;
-
+     border-radius: 5px;
 }
 .descubrir_platillos:hover{
-    background-color: var(--segundo-color);
+    background-color: var(--first-color);
+    color: var(--color-white);
 }
 .titulo_inicio{
     padding: 5px 0;
     color: var(--color-white);
-    font-size: 2.9rem;
     text-align:center;
-    padding: 0 20px 0 0;
 
 }
+.titulo_inicio.uno{
+    font-size: 3.5rem;
+    margin:5px 0;
+    
+}
+
+.titulo_inicio.sub{
+    font-size: 2rem;
+    margin-bottom: 30px;
+}
+
 .titulo_inicio.dos{
     margin: 8px 0 0 0;
+
 }
 .titulo_inicio.tres{
     margin: 8px 0 0 0;
@@ -258,7 +269,6 @@ img{
 .inicio_data_subtitulo{
     display: flex;
     justify-content: center;
-    padding: 0 20px 8px 0;
 }
 
 .item_icon{
@@ -295,7 +305,10 @@ img{
     mix-blend-mode: multiply;
 }
 
-
+.content_about {
+    width: 60%;
+    background-color: var(--body-color);
+}
 /* --------------------------------- ABOUT -----------------------*/
 
 .content_about_cards{
@@ -308,10 +321,6 @@ img{
     position: relative;
     padding:  7rem  0 2.5rem;
     background-color: var(--body-color);
-display: flex;
-justify-content: center;
-gap: 35px;
-align-items: center;
 }
 .content_about_cards{
     width: 400PX;
@@ -319,15 +328,15 @@ align-items: center;
     justify-content: center;
     align-items: center;
     padding: 1.2rem;
-    gap: 20px;
 }
 .content_about_cards .titulo{
-    font-size: 1.2rem;
+    font-size: 1.4rem;
+    margin-bottom: 5px;
 }
 .content_about_cards  p{
     word-break: break-all;
-    font-size: 1rem;
-    line-height: 20px;
+    font-size: 1.1rem;
+    line-height: 25px;
 }
 
 .content_about_cards i {
@@ -362,6 +371,12 @@ align-items: center;
     padding: 1.7rem 0;
     font-size: 3rem;
     line-height: 4rem;
+}
+.content_starts{
+    margin-bottom: 5px;
+}
+.content_img_like_name p{
+    margin-bottom: 10px;
 }
 
 .about_description{
@@ -420,20 +435,24 @@ align-items: center;
 /* --------------------------- categoria ----------------------*/
 
 .content_favoritos_destacados{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     gap: 35px;
     background-color: var(--body-color);
     flex-wrap: wrap;
-
+    grid-gap: 20px;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 50% 1fr;
+    grid-template-rows: 1fr 1fr;
+    margin: 50px 20px;
+    min-height: 550px;
+    width: 90%;
 }
+
 
 .card_platillo_destacado{
     position: relative;
-    width: 450px;
-    height: 250px;
-    border-radius: 30px;
+    width: 100%;
+    border-radius: 5px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -444,6 +463,10 @@ align-items: center;
 
 
 }
+.card_platillo_destacado:first-child{
+    grid-column: 1/1;
+    grid-row: 1/3;
+}
 
 .card_platillo_destacado::after{
     content: '';
@@ -453,6 +476,11 @@ align-items: center;
     height: 100%;
     background-color: rgb(0 0 0 / 68%);
 }
+
+.card_platillo_destacado{
+    position: relative;
+}
+
 .description_discover{
     text-align: center;
    color: var(--color-white);
@@ -486,6 +514,7 @@ align-items: center;
     background-size: cover;
 
 }
+
 .destacado_lanjostas{
     background-image: url('../img/img_destacado_3.jpg');
     background-position: center;
@@ -516,17 +545,19 @@ align-items: center;
     color: var(--color-white);
     font-size: 1.5rem;
     letter-spacing: 1px;
-    border-bottom: 4px solid var(--segundo-color);
     filter: drop-shadow(0 0mm 6mm var(--segundo-color));
     font-weight: lighter;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     word-spacing: 10px;
+    padding-bottom:8px ;
 }
 .card_platillo_destacado a{
     text-decoration: none;
     z-index: 1;
     font-size: 1.3rem;
     font-weight: 100;
+    padding-top: 10px;
+    border-top: 4px solid var(--segundo-color);
     color: var(--color-white);
 }
 
@@ -944,6 +975,7 @@ label{
 .menu{
     padding: 0;
     margin-bottom: 20px;
+    justify-content: space-between;
 }
 
 form{
@@ -1397,9 +1429,7 @@ a{
     .img_bx_form p{
         text-align: left;
     }
-    .contenedor_about{
-      flex-direction: column;
-    }
+
     .nav_menu_icon{
         display: block;
     }
@@ -1470,9 +1500,13 @@ a{
     .nav{
         height: 4rem;
     }
+
 }
 
 @media  screen and (max-width:1400px) {
+    .content_about_cards{
+        width:300px;
+    }
     .name_plato{
         font-size: 1.1rem;
         font-weight: 600;
@@ -1498,7 +1532,7 @@ a{
 
 @media screen and (max-width:550px) {
     .cards_of_menu,.content_productos_shop{
-        grid-template-columns: repeat(auto-fit, minmax(150px,1fr));
+        grid-template-columns: repeat(auto-fit, minmax(140px,1fr));
     }
     .content_btns_precio{
         justify-content: center;
@@ -1599,4 +1633,73 @@ a{
     .contenedor_subtitulo.servicios{
         font-size: 1.5rem;
     }
+}
+@media screen and (max-width: 580px){
+    .content_favoritos_destacados{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .card_platillo_destacado {
+        width: 100%;
+        height: 200px;
+    }
+    .titulo_section_categoria,.titulo_best_products,.titulo_destacado{
+        font-size: 1.4rem;
+    }
+    .titulo_inicio.uno{
+        font-size: 2.5rem;
+    }
+    .content_img_like_name P,.span_pedir{
+        font-size: 1rem;
+        text-align: center;
+    }
+    .content_btns_precio i{
+         font-size: 0.8rem;
+         
+    } 
+    .content_btns_precio p{
+        font-size: 1rem;
+    }
+    .titulo_inicio.uno{
+       font-size: 2.5rem;
+    }
+    .titulo_inicio.sub{
+        font-size: 1.5rem;
+    }
+    .content_about{
+        width: 90%;
+    }
+    .content_starts i{
+        font-size: 1rem;
+    }
+    .content h2{
+        font-size: 1.2rem;
+    }
+    .content p{
+        font-size: 1rem;
+    }
+    .name_plato{
+        font-size: 1rem;
+    }
+    .contenedor_titulo{
+        font-size: 1.5rem;
+    }
+    .navigator_best_products {
+        flex-direction: column;
+    }
+    .data_description_restaurant{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width:380px){
+    .cards_of_menu, .content_productos_shop 
+    {  
+        grid-template-columns: repeat(auto-fit, minmax(110px,1fr));
+    }
+    .content_btns_precio{
+        flex-direction: column;
+    }
+
 }
